fix(ResetAccountMarketStyles): add spacing to prevent layout shift

--- a/src/pages/ResetAccount/ResetAccount.module.scss
+++ b/src/pages/ResetAccount/ResetAccount.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-8);
+  margin: var(--size-12) 0;
 }
 
 .market {
